skills done, fix animation on mobile, projects in progress

--- a/src/components/home/skills/skills.module.scss
+++ b/src/components/home/skills/skills.module.scss
@@ -60,10 +60,6 @@
   font-size: 24px;
   transform: translateY(900px);
   transition: transform .5s ease-in-out;
-
-  &:hover {
-    box-shadow: 0 0 0 10px $black, 0 0 0 15px white;
-  }
 }
 
 
@@ -72,6 +68,12 @@
   background-color: $lightPurple;
   color: white;
   font-family: "Raleway-semiBold";
+
+  &:hover {
+    background-color: $black;
+    border: 4px solid $lightPurple;
+    color: $lightPurple;
+  }
 }
 
 .selector2 {
@@ -79,6 +81,12 @@
   background-color: $green;
   color: black;
   font-family: "Raleway-semiBold";
+
+  &:hover {
+    background-color: $black;
+    border: 4px solid $green;
+    color: $green;
+  }
 }
 
 .selector3 {
@@ -86,6 +94,12 @@
   background-color: white;
   color: black;
   font-family: "Raleway-semiBold";
+
+  &:hover {
+    background-color: $black;
+    border: 4px solid white;
+    color: white;
+  }
 }
 
 .selector1selected {
@@ -107,6 +121,8 @@
   text-transform: uppercase;
   font-family: "Raleway-black";
   margin-bottom: 32px;
+  transform: translateY(900px);
+  transition: transform .5s ease-in-out;
 }
 
 .skillContainer {
@@ -123,4 +139,39 @@
   color: white;
   font-family: "Raleway-medium";
   font-size: 20px;
+}
+
+@include tablet {
+  .title {
+    font-size: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .skillsData {
+    flex-direction: column;
+    padding-top: 24px;
+  }
+  .selectorsContainer {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+  }
+  .skillsCollectionContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 24px;
+  }
+  .skillContainer {
+    justify-content: center;
+    display: flex;
+    width: 50%;
+  }
+  .selector {
+    width: 80px;
+    height: 80px;
+    font-size: 16px;
+    margin: 16px;
+  }
 }
